# Customer-Churn-Analysis

./: README.md  pyproject.toml
notebook/: eda.ipynb
