[project]
name = "churn-prediction"
version = "0.1.0"
description = "This project uses uv package manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
